k8s/bins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bins
spec:
  selector:
    app: bins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
