k8s/bins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - bins.mancas.me
      secretName: bins-mancas-me-tls
  rules:
    - host: bins.mancas.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bins
                port:
                  number: 80
